<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/activity_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/activity_button_text_size"
        android:id="@+id/textView" />
    <Button
        style="@style/button_styles"
        android:id="@+id/button_spotify"
        android:text="@string/button_spotify"
        android:layout_below="@+id/textView"
        android:onClick="showToast" />
    <Button
        style="@style/button_styles"
        android:id="@+id/button_scores"
        android:text="@string/button_scores"
        android:layout_below="@+id/textView"
        android:onClick="showToast" />
    <Button
        style="@style/button_styles"
        android:id="@+id/button_library"
        android:text="@string/button_library"
        android:layout_below="@+id/textView"
        android:onClick="showToast" />
    <Button
        style="@style/button_styles"
        android:id="@+id/button_bigger"
        android:text="@string/button_bigger"
        android:layout_below="@+id/textView"
        android:onClick="showToast" />
    <Button
        style="@style/button_styles"
        android:id="@+id/button_reader"
        android:text="@string/button_reader"
        android:layout_below="@+id/textView"
        android:onClick="showToast" />
    <Button
        style="@style/button_styles"
        android:id="@+id/button_capstone"
        android:text="@string/button_capstone"
        android:layout_below="@+id/textView"
        android:onClick="showToast" />
</LinearLayout>
